crates/ui/tests/snapshots/panel_snapshots__regime_tag_column____regime_tag_column__bear.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "cell_summary(Some(\"bear\"))"
---
widget: regime_tag_cell
column_header: Regime
input_regime: bear
label: bear
color_token: neg
color_is_existing_lumen_token: true
