crates/ui/tests/snapshots/panel_snapshots__regime_tag_column____regime_tag_column__bull.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "cell_summary(Some(\"bull\"))"
---
widget: regime_tag_cell
column_header: Regime
input_regime: bull
label: bull
color_token: fg
color_is_existing_lumen_token: true
