crates/ui/tests/snapshots/panel_snapshots__regime_tag_column____regime_tag_column__calm.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "cell_summary(Some(\"calm\"))"
---
widget: regime_tag_cell
column_header: Regime
input_regime: calm
label: calm
color_token: fg_muted
color_is_existing_lumen_token: true
