crates/ui/tests/snapshots/panel_snapshots__regime_tag_column____regime_tag_column__none.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: cell_summary(None)
---
widget: regime_tag_cell
column_header: Regime
input_regime: None
label: —
color_token: fg_dim
color_is_existing_lumen_token: true
